[metadata]
name = alphavec
version = 0.4.4
author = Rich Klee @ breaded.xyz
author_email=hello@breaded.xyz
url = https://github.com/breaded-xyz/alphavec
description = Fast minimalist backtester sympathetic to the quant research process.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = True

[flake8]
max-line-length = 88
extend-ignore = E203, E501