[metadata]
name = alphavec
version = 1.0.0
author = breaded.xyz
author_email=hello@breaded.xyz
url = https://github.com/breaded-xyz/alphavec
description = Fast minimalist backtester sympathetic to the quant research process.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = True
python_requires = >=3.8
install_requires =
    arch>=7.2.0
    numpy>=2.2.2
    pandas>=2.2.3

[options.packages.find]
where = src
exclude = tests*